--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,7 @@ add_subdirectory(libs/arcface)
 add_subdirectory(libs/movenet)
 # add_subdirectory(libs/emotionnet)
 add_subdirectory(libs/gender)
+add_subdirectory(libs/age)
 add_subdirectory(libs/controller)
 add_subdirectory(libs/device_agent)
 
@@ -182,3 +183,6 @@ target_link_libraries(Container_MoveNet movenet)
 
 add_executable(Container_Gender libs/gender/gender.cpp)
 target_link_libraries(Container_Gender gender)
+
+add_executable(Container_Age libs/age/age.cpp)
+target_link_libraries(Container_Age age)
